--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       if: startsWith(matrix.os,'ubuntu')
       run: |
         sudo apt-get update
-        sudo apt-get install xorg-dev libglu1-mesa-dev
+        sudo apt-get install xorg-dev libglu1-mesa-dev gcc-10
     - name: Generate
       run: |
         mkdir build
