put space ship back in

--- a/Cost/CMakeLists.txt
+++ b/Cost/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
+#set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
 
 #set(CUDA_TOOLKIT_ROOT_DIR /opt/cuda)
 #set(CMAKE_CUDA_COMPILER /opt/cuda/bin/nvcc)
