--- a/Viewer/data/resources.conf
+++ b/Viewer/data/resources.conf
@@ -16,7 +16,7 @@ filename=capsule_high_res_split.bin
 filename=connectedness.conf
 
 [file]
-filename=hierarchical.conf
+filename=spot_area.conf
 
 [file]
 filename=sphere.bin
