--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -1,10 +1,3 @@
-# GLFW
-set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
-add_subdirectory(glfw EXCLUDE_FROM_ALL)
-
 # Corrade
 set(BUILD_PLUGINS_STATIC ON CACHE BOOL "" FORCE)
 set(BUILD_STATIC ON CACHE BOOL "" FORCE)
@@ -26,6 +19,13 @@ set(WITH_STANFORDIMPORTER ON CACHE BOOL "" FORCE)
 if (CORRADE_TARGET_EMSCRIPTEN)
     set(WITH_EMSCRIPTENAPPLICATION ON CACHE BOOL "" FORCE)
 else()
+    # GLFW
+    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+    set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+    add_subdirectory(glfw EXCLUDE_FROM_ALL)
+
     set(WITH_GLFWAPPLICATION ON CACHE BOOL "" FORCE)
 endif ()
 
@@ -51,11 +51,9 @@ add_subdirectory(liblbfgs EXCLUDE_FROM_ALL)
 add_subdirectory(bvh EXCLUDE_FROM_ALL)
 
 # Eigen
-set(EIGEN_BUILD_DOC OFF CACHE BOOL "" FORCE)
-set(EIGEN_BUILD_PKGCONFIG OFF CACHE BOOL "" FORCE)
-set(EIGEN_BUILD_BTL OFF CACHE BOOL "" FORCE)
-set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
-add_subdirectory(eigen EXCLUDE_FROM_ALL)
+add_library(Eigen INTERFACE)
+target_include_directories(Eigen INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/eigen/)
+add_library(Eigen3::Eigen ALIAS Eigen)
 
 
 
