compile suitesparse ourselves

--- a/Cost/CMakeLists.txt
+++ b/Cost/CMakeLists.txt
@@ -1,34 +1,11 @@
 #set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
 
-#set(CUDA_TOOLKIT_ROOT_DIR /opt/cuda)
-#set(CMAKE_CUDA_COMPILER /opt/cuda/bin/nvcc)
-#enable_language(CUDA)
-#
-#add_library(CudaCG
-#        CudaCG.cpp
-#        CudaCG.h
-#        )
-#
-#find_package(OpenMP)
-#find_package(CUDAToolkit)
-#
-#target_link_libraries(CudaCG PUBLIC CUDA::cusparse CUDA::cusolver CUDA::cudart Eigen3::Eigen ScopedTimer::ScopedTimer)
-#add_library(Phasefield::CudaCG ALIAS CudaCG)
-
-#add_library(SparseMatrix
-#        SparseMatrix.cpp
-#        SparseMatrix.h
-#        )
-#
-#add_library(Phasefield::SparseMatrix ALIAS SparseMatrix)
-
 add_library(Cost STATIC
         Cost.h
         ModicaMortola.cpp
         ModicaMortola.h
         ConnectednessConstraint.h
         ConnectednessConstraint.cpp
-        #StrangRules.hpp
         StoppingCriteria.cpp
         StoppingCriteria.h
         UnionFind.cpp
@@ -47,18 +24,18 @@ target_include_directories(Cost SYSTEM PRIVATE ${Eigen3_INCLUDE_DIRS})
 target_link_libraries(Cost PRIVATE
         ScopedTimer::ScopedTimer
         Phasefield::Viewer
-        #Phasefield::CudaCG
         )
 
 find_package(OpenMP)
 
 target_link_libraries(Cost PUBLIC
         Phasefield::Utilities
-        #Phasefield::Visualization
         Phasefield::VisualizationProxy
         Phasefield::Mesh
         Phasefield::Optimization
         OpenMP::OpenMP_CXX
+        cholmod
+        umfpack
         )
 
 set_property(TARGET Cost PROPERTY POSITION_INDEPENDENT_CODE ON)
@@ -72,11 +49,3 @@ endif()
 if (PHASEFIELD_WITH_TBB)
     target_compile_definitions(Cost PRIVATE PHASEFIELD_WITH_TBB)
 endif()
-
-if (PHASEFIELD_WITH_SUITESPARSE)
-    target_link_libraries(Cost PRIVATE SuiteSparse::UMFPACK)
-    target_compile_definitions(Cost PRIVATE PHASEFIELD_WITH_SUITESPARSE)
-endif()
-
-
-
