have import by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,6 @@ project(Phasefield CXX)
 
 cmake_policy(SET CMP0077 NEW)
 
-#set(MKL_ROOT /opt/intel/mkl)
-#set(MKL_PARALLEL ON)
-#set(MKL_64BIT ON)
-
 set(CMAKE_CXX_STANDARD 20)
 #set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 #set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
@@ -20,7 +16,7 @@ option(PHASEFIELD_WITH_ADOLC "Enable automatica gradient testing" OFF)
 option(PHASEFIELD_WITH_CERES "Enables ceres for optimization" OFF)
 option(PHASEFIELD_WITH_IPOPT "Enable ipopt for consrained optimization" OFF)
 option(PHASEFIELD_WITH_TBB "Enable threading using intel tbb" OFF)
-option(PHASEFIELD_WITH_IO "Import with assimp, export with vtk to vts (paraview), ply and videos using ffmpeg" OFF)
+option(PHASEFIELD_WITH_VIDEO "Make videos using ffmpeg" OFF)
 
 add_subdirectory(contrib)
 
@@ -28,12 +24,9 @@ find_package(PkgConfig REQUIRED)
 find_package(Corrade REQUIRED Containers Utility)
 find_package(Magnum REQUIRED GL MeshTools Primitives Shaders Trade DebugTools)
 find_package(MagnumIntegration REQUIRED ImGui)
+find_package(MagnumPlugins REQUIRED StanfordSceneConverter)
 
 if(PHASEFIELD_WITH_IO)
-    find_package(MagnumPlugins REQUIRED AssimpImporter)
-    find_package(MagnumPlugins REQUIRED StanfordSceneConverter)
-    find_package(VTK REQUIRED CommonCore CommonDataModel IOXML)
-
     pkg_check_modules(libavcodec REQUIRED IMPORTED_TARGET libavcodec)
     pkg_check_modules(libavutil REQUIRED IMPORTED_TARGET libavutil)
     pkg_check_modules(libswscale REQUIRED IMPORTED_TARGET libswscale)
@@ -57,10 +50,6 @@ if(PHASEFIELD_WITH_TBB)
     find_package(TBB)
 endif()
 
-if(PHASEFIELD_WITH_SUITESPARSE)
-    find_package(SuiteSparse REQUIRED CHOLMOD)
-endif()
-
 if (CORRADE_TARGET_EMSCRIPTEN)
     find_package(Magnum REQUIRED EmscriptenApplication)
     #if(NOT TARGET OpenGLES2::OpenGLES2)
@@ -77,8 +66,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_subdirectory(Utilities)
 add_subdirectory(ScopedTimer)
 add_subdirectory(Visualization)
-#add_subdirectory(polygonizer)
-#add_subdirectory(math)
 add_subdirectory(Optimization)
 add_subdirectory(Mesh)
 add_subdirectory(Cost)
