--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -7,12 +7,8 @@ set(WITH_UTILITY ON CACHE BOOL "" FORCE)
 add_subdirectory(corrade EXCLUDE_FROM_ALL)
 find_package(Corrade) # bring in CORRADE_TARGET_* macros
 
-# Magnum + Magnum-Plugins (Assimp)
-if (PHASEFIELD_WITH_IO)
-    set(WITH_ANYIMAGEIMPORTER ON CACHE BOOL "" FORCE)
-    set(WITH_ASSIMPIMPORTER ON CACHE BOOL "" FORCE)
-endif ()
-
+# Magnum
+set(WITH_ANYIMAGEIMPORTER ON CACHE BOOL "" FORCE)
 set(WITH_STANFORDSCENECONVERTER ON CACHE BOOL "" FORCE)
 set(WITH_STANFORDIMPORTER ON CACHE BOOL "" FORCE)
 
